--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,23 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-bottom: 1px solid #eaeaea;
+}
+nav a{
+  text-decoration: none;
+  padding: 0 10px;
+  line-height: 50px;
+  transition: all .3s;
+}
+nav a:hover{
+  text-decoration: underline;
+}
+nav a.active{
+  font-size: 18px;
+  font-weight: bold;
+  text-decoration: underline;
+  color: red;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main{
+  padding: 10px;
 }
