--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,10 @@ nav a:hover {
 }
 
 nav a.active {
-  font-size: 18px;
   font-weight: bold;
   text-decoration: underline;
   color: red;
 }
 
+main{
+}
