--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,41 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+/* fade */
+
+.fade-appear {
+    opacity: 0;
+}
+
+.fade-appear-active {
+    transition: all .5s;
+    opacity: 1;
+}
+
+.fade-enter {
+    opacity: 0;
+}
+
+.fade-enter-active {
+    opacity: 1;
+    transition: all .5s;
+}
+
+.fade-enter-done {
+    opacity: 1;
+}
+
+.fade-exit {
+    opacity: 1;
+}
+
+.fade-exit-active {
+    opacity: 0;
+    transition: all .3s;
+}
+
+.fade-exit-done {
+    opacity: 0;
+}
