--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    background: #f7f7f8;
     font-family: "Lucida Console", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
         "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
         sans-serif;
