--- a/src/index.css
+++ b/src/index.css
@@ -94,40 +94,18 @@ code {
 }
 
 
-
 /* fade */
-
-.fade-appear {
-  opacity: 0;
-}
-
-.fade-appear-active {
-  transition: all .5s;
-  opacity: 1;
-}
-
 .fade-enter {
-  opacity: 0;
+  opacity: 0.01;
 }
-
 .fade-enter-active {
   opacity: 1;
-  transition: all .5s;
+  transition: opacity 500ms ease-in;
 }
-
-.fade-enter-done {
-  opacity: 1;
-}
-
 .fade-exit {
   opacity: 1;
 }
-
 .fade-exit-active {
-  opacity: 0;
-  transition: all .3s;
-}
-
-.fade-exit-done {
-  opacity: 0;
+  opacity: 0.01;
+  transition: all 500ms ease-in;
 }
