--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,3 @@
-body {
-  min-width: 320px;
-  max-width: 540px;
-  margin: 0 auto;
-  line-height: 1.5;
-  background: #f7f7f8;
-  font-size: 14px;
-  font-family: "Lucida Console", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-text-size-adjust: 100% !important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-
-* {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  outline: 0
-}
 
 blockquote,
 body,
@@ -93,18 +73,50 @@ code {
     monospace;
 }
 
+/* common */
+body {
+  min-width: 320px;
+  max-width: 540px;
+  margin: 0 auto;
+  line-height: 1.5;
+  background: #f7f7f8;
+  font-size: 14px;
+  font-family: "Lucida Console", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-text-size-adjust: 100% !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  outline: 0
+}
+
+img {
+  max-width: 100%;
+}
+
+@font-face {
+  font-family: industry;
+  src: url('./asset/fonts/Industry.otf');
+}
 
 /* fade */
 .fade-enter {
   opacity: 0.01;
 }
+
 .fade-enter-active {
   opacity: 1;
   transition: opacity 500ms ease-in;
 }
+
 .fade-exit {
   opacity: 1;
 }
+
 .fade-exit-active {
   opacity: 0.01;
   transition: all 500ms ease-in;
